--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -16,7 +16,6 @@
 <body>
     {{{body}}}
 </body>
-<script src="/assets/js/wt.js">
-
-</script>
+<script src="/assets/js/wt.js"></script>
+<script src="/assets/js/fetchFunctions.js"></script>
 </html>
