--- a/views/partials/modal_patient_comment.hbs
+++ b/views/partials/modal_patient_comment.hbs
@@ -1,4 +1,4 @@
-<div id="patientCommentModal_{{dateFormat recordDate}}_{{type}}" class="wt-modal">
+<div id="patientCommentModal_{{identifier}}_{{type}}" class="wt-modal">
         <div class="wt-modal-content wt-align-left">
             <span class="wt-modal-close">&times;</span>
             <div class="wt-grid-container">
@@ -6,7 +6,7 @@
                     <h2>Patient Comment </h2>
                 </div>
                 <div class="wt-grid-item size-6@p size-12@t">
-                    <h4>Date: {{dateFormat recordDate}}</h4>
+                    <h4>Name: {{name}}</h4>
                 </div>
                 <div class="wt-grid-item size-6@p size-12@t">
                     <h4>Type: {{type}}</h4>
