--- a/views/partials/patient_sidebar.hbs
+++ b/views/partials/patient_sidebar.hbs
@@ -1,12 +1,7 @@
 <div id="main_sidebar">
     <div class="panel-sidebar">
         <div class="panel-sidebar-logo">
-            <br />
-            <img class="wt-border-circle" src="./assets/img/patient_img.png" width="60px" alt="">
-            <h3 class="wt-color-white">Pat</h3>
-            <a href="/patient_settings">
-                <h6 class="wt-color-white "><u>manage account</u></h6>
-            </a>
+            <img src="/assets/img/logo_diabetes_white.png" width="120px" alt="">
         </div>
         <ul class="panel-sidebar-menu">
             <li>
