--- a/views/index.hbs
+++ b/views/index.hbs
@@ -21,9 +21,9 @@
     </div>
 </header>
 <div class="wt-banner">
-    <img src="./assets/img/banner.png" alt="" width="100%">
+    <img src="./assets/img/banner_updated.png" alt="" width="100%">
     <div class="wt-hidden@p wt-visible@t wt-banner-content banner-home-1@t">
-        <p class=" wt-text-jumbo wt-color-grey">Look what this app
+        <p class=" wt-text-jumbo wt-color-white">Look what this app
             can do for you </p>
     </div>
     <div class="wt-hidden@t wt-banner-content banner-home-1@p">
