--- a/views/login.hbs
+++ b/views/login.hbs
@@ -27,7 +27,14 @@
             <div class="wt-grid-item size-12@p">
                 <a href="./patient_home">
                     <button class="wt-btn wt-btn-primary wt-btn-large wt-fullwidth">
-                        Login
+                        Login patient
+                    </button>
+                </a>
+            </div>
+            <div class="wt-grid-item size-12@p">
+                <a href="./clinician_dashboard">
+                    <button class="wt-btn wt-btn-primary wt-btn-large wt-fullwidth">
+                        Login clinician
                     </button>
                 </a>
             </div>
