--- a/views/patient_records.hbs
+++ b/views/patient_records.hbs
@@ -1,9 +1,232 @@
 {{> patient_sidebar}}
 {{> header}}
+
+{{!The whole page w/o patient_sidebar}}
 <div class="panel-content">
+
+    {{!Header}}
     <div class="wt-grid-container">
-        <div class="wt-grid-item size-12@p size-9@t">
-            <p>records</p>
+        <div class="wt-grid-item size-12@p size-12@t wt-color-primary">
+            <div style="display:flex; align-items:center">
+                <div style="flex-grow: 1;">
+                    <h1>My Records</h1>
+                </div>
+            </div>
+        </div>
+
+        {{!-- Patient Data Card Table --}}
+        <div class="wt-grid-item size-12@t">
+            {{!-- Patient Data Card Table Header --}}
+            <div class="wt-card-content wt-visible@t wt-hidden@p">
+                <div class="wt-grid-container">
+                    <div class="wt-grid-item size-1@t">
+                    </div>
+                    <div class="wt-grid-item size-2@t">
+                        <strong>Date</strong>
+                    </div>
+                    <div class="wt-grid-item size-3@t">
+                        <strong>Blood Glucose Level</strong>
+                    </div>
+                    <div class="wt-grid-item size-2@t">
+                        <strong>Weight</strong>
+                    </div>
+                    <div class="wt-grid-item size-2@t">
+                        <strong>Insulin Doses</strong>
+                    </div>
+                    <div class="wt-grid-item size-2@t">
+                        <strong>Exercise</strong>
+                    </div>
+                    {{!<strong>Blood Glucose Level</strong>
+                    <div class="wt-grid-item">
+                        <strong>Weight</strong>
+                    </div>
+                    <div class="wt-grid-item">
+                        <strong>Insulin Doses</strong>
+                    </div>
+                    <div class="wt-grid-item">
+                        <strong>Exercise</strong>
+                    </div>
+                    <div class="wt-grid-item">
+                    </div>}}
+                </div>
+            </div>
+            {{!-- Patient Data Card Table Content --}}
+            {{#each healthData}}
+                <div class="wt-card">
+                    <div class="wt-card-content">
+                        <div class="wt-grid-container wt-hidden@p wt-visible-flex@t">
+                            <div class="wt-grid-item size-1@t">
+                            </div>
+
+                            <div class="wt-grid-item size-2@t">    
+                                {{date}}
+                            </div>
+
+                            <div class="wt-grid-item size-3@t">
+                                {{#if (isfill glucoseLevel.mandatory)}}
+                                    {{#if glucoseLevel.value}}
+                                        <span class="{{#checkOutOfThreshold glucoseLevel.outOfTheThreshold}} {{/checkOutOfThreshold}}">
+                                            {{{glucoseLevel.value}}}
+                                        </span>
+                                    {{else}}
+                                        <span>
+                                            -
+                                        </span>
+                                    {{/if}}
+                                {{else}}
+                                    <span>
+                                        -
+                                    </span>
+                                {{/if}}
+                            </div>
+
+                            <div class="wt-grid-item size-2@t">
+                                {{#if (isfill weight.mandatory)}}
+                                    {{#if weight.value}}
+                                        <span class="{{#checkOutOfThreshold weight.outOfTheThreshold}} {{/checkOutOfThreshold}}">
+                                            {{{weight.value}}}
+                                        </span>
+                                    {{else}}
+                                        <span>
+                                            -
+                                        </span>
+                                    {{/if}}
+                                {{else}}
+                                    <span>
+                                        -
+                                    </span>
+                                {{/if}}
+                            </div>
+
+                            <div class="wt-grid-item size-2@t">
+                                {{#if (isfill insulinDoses.mandatory)}}
+                                    {{#if insulinDoses.value}}
+                                        <span class="{{#checkOutOfThreshold insulinDoses.outOfTheThreshold}} {{/checkOutOfThreshold}}">
+                                            {{{insulinDoses.value}}}
+                                        </span>
+                                    {{else}}
+                                        <span>
+                                            -
+                                        </span>
+                                    {{/if}}
+                                {{else}}
+                                    <span>
+                                        -
+                                    </span>
+                                {{/if}}
+                            </div>
+
+                            <div class="wt-grid-item size-2@t">
+                                {{#if (isfill exercise.mandatory)}}
+                                    {{#if exercise.value}}
+                                        <span class="{{#checkOutOfThreshold exercise.outOfTheThreshold}} {{/checkOutOfThreshold}}">
+                                            {{{exercise.value}}}
+                                        </span>
+                                    {{else}}
+                                        <span>
+                                            -
+                                        </span>
+                                    {{/if}}
+                                {{else}}
+                                    <span>
+                                        -
+                                    </span>
+                                {{/if}}
+                            </div>    
+                        </div>
+
+                        <div class="wt-grid-container wt-hidden@t wt-visible-flex@p">
+                            <div class="wt-grid-item size-12@p">
+                                {{date}}
+                            </div>
+                            <span class="wt-grid-item size-6@p">
+                                <strong>Blood Glucose Level</strong>
+                            </span>
+                            <span class="wt-grid-item size-6@p">
+                                {{#if (isfill glucoseLevel.mandatory)}}
+                                    {{#if glucoseLevel.value}}
+                                        <span class="{{#checkOutOfThreshold glucoseLevel.outOfTheThreshold}} {{/checkOutOfThreshold}}">
+                                            {{{glucoseLevel.value}}}
+                                        </span>
+                                    {{else}}
+                                        <span>
+                                            -
+                                        </span>
+                                    {{/if}}
+                                {{else}}
+                                    <span>
+                                        -
+                                    </span>
+                                {{/if}}
+                            </span>
+
+                            <span class="wt-grid-item size-6@p">
+                                <strong>Weight</strong>
+                            </span>
+                            <span class="wt-grid-item size-6@p">
+                                {{#if (isfill weight.mandatory)}}
+                                    {{#if weight.value}}
+                                        <span class="{{#checkOutOfThreshold weight.outOfTheThreshold}} {{/checkOutOfThreshold}}">
+                                            {{{weight.value}}}
+                                        </span>
+                                    {{else}}
+                                        <span>
+                                            -
+                                        </span>
+                                    {{/if}}
+                                {{else}}
+                                    <span>
+                                        -
+                                    </span>
+                                {{/if}}
+                            </span>
+
+                            <span class="wt-grid-item size-6@p">
+                                <strong>Insulin Doses</strong>
+                            </span>
+                            <span class="wt-grid-item size-6@p">
+                                {{#if (isfill insulinDoses.mandatory)}}
+                                    {{#if insulinDoses.value}}
+                                        <span class="{{#checkOutOfThreshold insulinDoses.outOfTheThreshold}} {{/checkOutOfThreshold}}">
+                                            {{{insulinDoses.value}}}
+                                        </span>
+                                    {{else}}
+                                        <span>
+                                            -
+                                        </span>
+                                    {{/if}}
+                                {{else}}
+                                    <span>
+                                        -
+                                    </span>
+                                {{/if}}
+                            </span>
+
+                            <span class="wt-grid-item size-6@p">
+                                <strong>Exercise</strong>
+                            </span>
+                            <span class="wt-grid-item size-6@p">
+                                {{#if (isfill exercise.mandatory)}}
+                                    {{#if exercise.value}}
+                                        <span class="{{#checkOutOfThreshold exercise.outOfTheThreshold}} {{/checkOutOfThreshold}}">
+                                            {{{exercise.value}}}
+                                        </span>
+                                    {{else}}
+                                        <span>
+                                            -
+                                        </span>
+                                    {{/if}}
+                                {{else}}
+                                    <span>
+                                        -
+                                    </span>
+                                {{/if}}
+                            </span>
+                        </div>
+                    </div>
+                </div>
+                <br />
+            {{/each}}
         </div>
     </div>
 </div>
