--- a/views/clinician_patient_data.hbs
+++ b/views/clinician_patient_data.hbs
@@ -43,7 +43,7 @@
 
                         {{#each healthData}}
                         <tr>
-                            <td>{{date}}</td> {{!-- {{date}} --}}
+                            <td>{{date}}</td>
                             <td>
                                 {{#if (isfill glucoseLevel.mandatory)}}
                                 {{#if glucoseLevel.value}}
