reversed date for supportMessages

--- a/views/clinician_patient_support_messages.hbs
+++ b/views/clinician_patient_support_messages.hbs
@@ -33,7 +33,7 @@
                     <th>Date</th>
                     <th>Message</th>
                     <tbody>
-                        {{#each patient.supportMessages}}
+                        {{#each supportMessage}}
                         <tr>
                             <td>
                                 {{#dateHourFormat date}} {{/dateHourFormat}}
