fetch data from database to display patient's profile

--- a/views/clinician_patient_profile.hbs
+++ b/views/clinician_patient_profile.hbs
@@ -23,64 +23,54 @@
             {{!-- Profile Card --}}
             <div class="wt-grid-item size-12@p size-12@t">
                 <div class="wt-card">
-                    <div class="wt-card-content">
-
+                    <div class="wt-grid-item size-12@t">
                         <div class="wt-grid-container">
+
+                            {{!-- Row 1 --}}
                             <div class="wt-grid-item size-half@t"></div>
                             <div class="wt-grid-item size-12@p size-5@t">
                                 <label>Given Name(s)</label>
-                                <div class="wt-card" id="horizontal_scroll_card">
-                                    Jane
-                                </div>
+                                <input readonly type="text" value={{patient.givenName}} />
                             </div>
                             <div class="wt-grid-item size-1@t"></div>
                             <div class="wt-grid-item size-12@p size-5@t">
                                 <label>Family Name</label>
-                                <div class="wt-card" id="horizontal_scroll_card">
-                                    Cooper
-                                </div>
+                                <input readonly type="text" value={{patient.familyName}} />
                             </div>
-                        </div>
 
-                        <div class="wt-grid-container">
+                            {{!-- Row 2 --}}
                             <div class="wt-grid-item size-half@t"></div>
                             <div class="wt-grid-item size-12@p size-5@t">
                                 <label>Screen Name</label>
-                                <div class="wt-card" id="horizontal_scroll_card">
-                                    Moondancer
-                                </div>
+                                <input readonly type="text" value={{patient.screenName}} />
                             </div>
                             <div class="wt-grid-item size-1@t"></div>
                             <div class="wt-grid-item size-12@p size-5@t">
                                 <label>Email</label>
-                                <div class="wt-card" id="horizontal_scroll_card">
-                                    janecooper135@gmail.com
-                                </div>
+                                <input readonly type="text" value={{patient.email}} />
                             </div>
-                        </div>
 
-                        <div class="wt-grid-container">
+                            {{!-- Row 3 --}}
                             <div class="wt-grid-item size-half@t"></div>
                             <div class="wt-grid-item size-12@p size-5@t">
-                                <label>Date of Birth</label>
-                                <div class="wt-card" id="horizontal_scroll_card">
-                                    05/12/2000
-                                </div>
+                                <label>Year of Birth</label>
+                                <input readonly type="text" value={{patient.yearOfBirth}} />
                             </div>
-                        </div>
 
+                        </div>    
                         <div class="wt-grid-container">
+                            
+                            {{!-- Row 4 --}}
                             <div class="wt-grid-item size-half@t"></div>
                             <div class="wt-grid-item size-11@p size-11@t">
                                 <label>Bio</label>
-                                <div class="wt-card" id="vertical_scroll_card" style="height: 70px; padding: 15px">
-                                    Patient's bio. Have a history of ..., tends to ...
-                                </div>
+                                <textarea readonly rows="5">{{patient.bio}}</textarea>
                             </div>
-                        </div>
 
-                        <div class="wt-grid-item size-12@p"></div>
-                        
+                            {{!-- Spacing --}}
+                            <div class="wt-grid-item size-12@p"></div>
+
+                        </div>
                     </div>
                 </div>
             </div>
