--- a/public/assets/css/wt.css
+++ b/public/assets/css/wt.css
@@ -551,7 +551,7 @@ textarea {
     border: none;
     background-color: #f5f5f5;
     width: calc(100% - 20px);
-
+    font-family: Roboto, sans-serif;
 }
 
 input:hover {
